Fixed spacing issues for About Me section and LB gallery.

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -100,12 +100,6 @@ li {
   display: flex;
 }
 
-.gridcontainer {
-  display: grid;
-  grid-template: repeat(50px 50px 50px) / repeat(50px 50px 50px);
-  grid-gap: 10px;
-}
-
 .image-container {
   overflow: hidden;
 }
@@ -200,22 +194,73 @@ nav li {
 
 #aboutme {
   background-color: #FFFFFF;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .aboutme-flex {
   display: flex;
   min-height: 500px;
-  height: auto;
-  width: 100%;
-  justify-content: space-around;
-  margin: 20px;
+  align-items: center;
 }
 
 .aboutme-left {
-  width: 20%;
-  min-width: 300px;
+  width: 30%;
   height: auto;
-  margin-left: 300px;
+  padding: 20px;
+}
+
+.aboutme-left img {
+  width: 100%;
+  height: auto;
+  border:1px solid #021a40;
+}
+
+.aboutme-middle {
+  width: 50%;
+  height: auto;
+  padding: 32px 24px;
+  text-align: justify;
+}
+
+.aboutme-content h4 p {
+  color: black;
+}
+
+.aboutme-right {
+  width: 20%;
+  height: auto;
+  background-color: #D1D2D5;
+  border:1px solid black;
+  padding: 30px;
+  margin-bottom: 40px;
+  margin-right: 20px;
+}
+
+.socialmedia {
+display: flex;
+align-items: center;
+}
+
+.socialmedia img:first-child {
+  max-width: 50px;
+  max-height: 50px;
+}
+
+@media only screen and (max-width: 1080px) {
+
+  .aboutme-left img {
+    display: none;
+  }
+
+}
+
+
+/* .aboutme-left {
+  width: 20%;
+  min-width: 200px;
+  height: auto;
+  padding-left: 20px;
 }
 
 .aboutme-left img {
@@ -224,54 +269,22 @@ nav li {
   max-height: 650px;
   max-width: 50px;
   min-height: 450px;
-  min-width: 300px;
+  min-width: 100px;
   border:1px solid black;
-}
+} */
 
-.aboutme-middle {
+/* .aboutme-middle {
   width: 60%;
-  min-width: 500px;
+  min-width: 100px;
   height: auto;
   text-align: justify;
-  margin-right: 50px;
-  margin-left: 50px;
+
 }
 
 .aboutme-content h4 p {
   color: black;
-}
+} */
 
-.aboutme-content a:hover {
-  color: #1E1F26;
-  font-weight: 400;
-}
-
-.aboutme-right {
-  width: 20%;
-  min-width: 200px;
-  height: auto;
-  background-color: #D1D2D5;
-  border:1px solid black;
-  padding: 30px;
-  margin-right: 300px;
-  margin-bottom: 40px;
-  max-height: 550px;
-  max-width: 350px;
-}
-
-@media only screen and (max-width: 1080px) {
-  .aboutme-flex {
-    flex-wrap: wrap;
-  }
-
-  .aboutme-left img {
-    display: none;
-  }
-
-  .aboutme-right {
-    margin: 20px;
-  }
-}
 
   /* Trips Style */
 
@@ -367,33 +380,27 @@ padding-top: 10px;
 
 /*Lightbox Gallery Style*/
 
-.galleryinfo {
+.galleryinfo h2 {
+  padding-top: 25px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.lightbox-container {
   display: flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
   height: auto;
-}
-
-.galleryinfo h2 {
-  padding-top: 25px;
-  padding-bottom: 5px;
-}
-
-.lightbox-container {
-  display: inline-block;
-  width: auto;
-  height: auto;
-  padding: 2px;
-  margin: 10px;
+  padding-bottom: 32px;
 }
 
 .galleryimage {
-  width: 325px;
+  width: 300px;
   height: 225px;
-  border-radius: 4px;
-  padding: 1px;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 /* Blog Style */
@@ -402,20 +409,17 @@ padding-top: 10px;
   background-color: #D1D2D5;
   padding-top: 80px;
   padding-bottom: 32px;
-
 }
 
-#blog.flexcontainer {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+.blog-flex {
+  display: flex;
+  align-items: center;
 }
 
 .blog-leftside {
   width: 30%;
   height: auto;
   padding: 20px;
-  vertical-align: middle;
 }
 
 .blog-leftside img {
@@ -425,18 +429,12 @@ padding-top: 10px;
 }
 
 .blog-rightside {
-  width: 60%;
+  width: 70%;
   height: auto;
   padding: 32px 24px;
-  margin: 0 auto;
 }
 
 .blogcontent {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-wrap: wrap;
   padding: 5px;
 }
 
@@ -447,7 +445,7 @@ padding-top: 10px;
 
 .blogcontent h5, ul, li {
   color: black;
-  
+
 }
 
 .blogcontent a:hover {
@@ -467,6 +465,7 @@ justify-content: center;
 
 #phototips h1 {
   text-align: center;
+  text-shadow: 2px 2px 2px #D1D2D5;
 }
 
 .phototips-main {
